# yt-recorder

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: TASK-4-SUMMARY.txt  edit-deep-inspection.json  edit-dom-inspection.json  final-inspection.json  playlist-dialog-inspection.json  task-1-constructor-check.txt  task-1-imports-cleaned.txt  task-1-lint-check.txt  task-1-model-check.txt  task-1-playwright-field.txt  task-1-selector-manifest.md  task-1-signature-check.txt  task-1-splitter.txt  task-2-config.txt  task-2-factory-sig.txt  task-2-verification.txt  task-3-tests.txt  task-4-registry.txt  task-4-removed-refs.txt  task-4-test-youtube.txt  task-4-verification.txt  task-5-dry-run-RETRY.txt  task-5-single-video.txt  task-5-test-raid.txt  task-5-youtube.txt  task-6-full-suite.txt  task-6-health.txt  upload-dom-inspection.json  upload-full-inspection.json
.sisyphus/plans/: v0.2-architecture-evolution.md  v0.2-finish-and-ship.md  v0.2-master-execution.md  v0.2-revision-security-perf-quality.md  video-splitting.md  youtube-selector-fix.md
tests/: test_cli.py  test_config_v2.py  test_formatters.py  test_integration_split.py  test_pipeline.py  test_pipeline_phone_verification.py  test_pipeline_split.py  test_raid.py  test_raid_v2.py  test_registry.py  test_registry_v3.py  test_scanner.py  test_splitter.py  test_transcriber.py  test_utils.py  test_youtube.py  test_youtube_v2.py
(+27 files in other folders)
